--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!Doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
 	<head>
@@ -8,6 +8,7 @@
 
 <body>
 	<h1>Odin Recipes</h1>
+	<a href="recipes/pork_chops.html">Skillet Pork Chops</a>
 </body>
 
 </html>
