Add image to recipe

--- a/recipes/pork_chops.html
+++ b/recipes/pork_chops.html
@@ -6,6 +6,8 @@
 	</head>
 	<body>
 		<h1>Skillet Pork Chops with Potatoes and Onion</h1>
-		<a href="../index.html">Home</a>
+			<img src="../images/pork_chops.jpg" alt="Finished Skillet Pork Chops dish" height="310" width="310">
+
+			<a href="../index.html">Home</a>
 	</body>
 </html>
