--- a/recipes/pork_chops.html
+++ b/recipes/pork_chops.html
@@ -5,9 +5,42 @@
 		<title>Pork Chops</title>
 	</head>
 	<body>
-		<h1>Skillet Pork Chops with Potatoes and Onion</h1>
-			<img src="../images/pork_chops.jpg" alt="Finished Skillet Pork Chops dish" height="310" width="310">
-
-			<a href="../index.html">Home</a>
+		<a href="../index.html">Home</a>
+			<h1>Skillet Pork Chops with Potatoes and Onion</h1>
+				<img src="../images/pork_chops.jpg" alt="Finished Skillet Pork Chops dish" height="310" width="310">
+					<h2>Description</h2>
+						<p>
+							A great cold-weather dish that takes little prep time and yields tender chops. This meal is not only full of flavor
+							but immensely satisfying and can easily serve 4 people.
+						</p>
+						<p>
+							Easy to make and simply delightful, it will leave your friends or family raving about your incredible cooking skills.
+							Serve hot to enjoy the pork chops at their best.
+						</p>
+					<h3>Ingredients</h3>
+						<ul>
+							<li>2 tablespoons vegetable oil</li>
+							<li>4 pork chops (1/2 inch thick), trimmed</li>
+							<li>2 tablespoons all-purpose flour</li>
+							<li>⅓ cup grated Parmesan cheese</li>
+							<li>½ teaspoon salt</li>
+							<li>¼ teaspoon pepper</li>
+							<li>4 Yukon Gold potatoes, thinly sliced</li>
+							<li>2 medium onions, sliced</li>
+							<li>3 cubes beef bouillon</li>
+							<li>¾ cup hot water</li>
+							<li>1 tablespoon lemon juice</li>
+						</ul>
+					<h3>Steps</h3>
+						<ol>
+							<li>Heat oil in a large skillet over medium heat. Coat the pork chops with flour, and place in the skillet. 
+								Brown about 4 minutes on each side.</li>
+							<li>In a small bowl, mix the Parmesan cheese, salt, and pepper. Sprinkle 1/2 the Parmesan cheese mixture over the pork chops. 
+								Layer chops with the potatoes. Sprinkle with remaining Parmesan cheese mixture. Top with onion slices.</li>
+							<li>In a small bowl, dissolve the beef bouillon cubes in hot water. Stir in the lemon juice. 
+								Pour over the layered pork chops.</li>
+							<li>Cover skillet, and reduce heat. Simmer 40 minutes, until vegetables are tender and pork chops have reached an 
+								internal temperature of 145 degrees F (63 degrees C).</>
+					</ol>
 	</body>
 </html>
