Add American Goulash Recipe page

--- a/recipes/pork_chops.html
+++ b/recipes/pork_chops.html
@@ -40,7 +40,7 @@
 							<li>In a small bowl, dissolve the beef bouillon cubes in hot water. Stir in the lemon juice. 
 								Pour over the layered pork chops.</li>
 							<li>Cover skillet, and reduce heat. Simmer 40 minutes, until vegetables are tender and pork chops have reached an 
-								internal temperature of 145 degrees F (63 degrees C).</>
+								internal temperature of 145 degrees F (63 degrees C).</li>
 					</ol>
 	</body>
 </html>
