--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
 <body>
 	<h1>Odin Recipes</h1>
-	<a href="recipes/pork_chops.html">Skillet Pork Chops</a>
+		<ul>
+			<li><a href="recipes/pork_chops.html">Skillet Pork Chops</a></li>
+			<li><a href="recipes/chicken_pasta.html">Skillet Chicken Pasta</a></li>
+			<li><a href="recipes/american_goulash.html">American Goulash</a></li>
 </body>
 
 </html>
