Correct home link in chicken_pasta and add image link

--- a/recipes/chicken_pasta.html
+++ b/recipes/chicken_pasta.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head meta charset="UTF8>
-	<title>Recipe</title>
+	<head meta charset="UTF8">
+	<title>Pasta Chicken</title>
 	</head>
 	<body>
 		<a href="../index.html">Home</a>
 			<h1>Skillet Pork Chops with Potatoes and Onion</h1>
-				<img src="../images/skillet-chicken-pasta.jpg" alt="Finished Skillet Chicken Pasta dish" height="310" width="310">
+				<img src="../images/skillet-pasta-chicken.jpg" alt="Finished Skillet Pasta Chicken dish" height="310" width="310">
 					<h2>Description</h2>
 						<p>
 							This chicken pasta skillet meal is a tasteful combination of vegetables, chicken, and pasta prepared in a cast iron skillet. 
