--- a/recipes/american_goulash.html
+++ b/recipes/american_goulash.html
@@ -1,7 +1,7 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF8"
+		<meta charset="UTF8">
 		<title>American Goulash</title>
 	</head>
 	<body>
