--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<h1>Odin Recipes</h1>
 		<ul>
 			<li><a href="recipes/pork_chops.html">Skillet Pork Chops</a></li>
-			<li><a href="recipes/chicken_pasta.html">Skillet Chicken Pasta</a></li>
+			<li><a href="recipes/pasta_chicken.html">Skillet Chicken Pasta</a></li>
 			<li><a href="recipes/american_goulash.html">American Goulash</a></li>
 </body>
 
