Add basic styling to home recipes

--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
 	<head>
 	<meta charset="UTFB">
 	<title>Recipes</title>
+	<link rel="stylesheet" href="style.css">
 	</head>
 
-<body>
-	<h1>Odin Recipes</h1>
-		<ul>
-			<li><a href="recipes/pork_chops.html">Skillet Pork Chops</a></li>
-			<li><a href="recipes/pasta_chicken.html">Skillet Chicken Pasta</a></li>
-			<li><a href="recipes/american_goulash.html">American Goulash</a></li>
-</body>
+	<body class="recipes">
+		<h1>Odin Recipes</h1>
+
+		<div>
+			<ul>
+				<li><a href="recipes/pork_chops.html" class="link one">Skillet Pork Chops</a></li>
+				<li><a href="recipes/chicken_pasta.html" class="link two">Skillet Chicken Pasta</a></li>
+				<li><a href="recipes/american_goulash.html" class="link three">American Goulash</a></li>
+			</ul>
+		</div>
+	</body>
 
 </html>
 
